@@ -441,6 +441,13 @@ static uint32_t	_get_job_time_limit(struct job_record *job_ptr)
 {
 	uint32_t limit = job_ptr->time_limit;
 
+	if ((limit == NO_VAL) && (job_ptr->part_ptr)) {
+		/* Job will get partition's time limit when schedule.
+		 * The partition's limit can change between now and 
+		 * job initiation time. */
+		limit = job_ptr->part_ptr->max_time;
+	}
+
 	if ((limit == NO_VAL) || (limit == INFINITE))
 		return (uint32_t) (365 * 24 * 60 * 60);	/* one year */
 	else
